Commit adaptacion a android