@@ -5,7 +5,6 @@ import com.backendLevelup.Backend.dtos.LoginDTO;
 import com.backendLevelup.Backend.dtos.RegistroUsuarioDTO;
 import com.backendLevelup.Backend.dtos.UsuarioDTO;
 import com.backendLevelup.Backend.exceptions.ResourceNotFoundException;
-import com.backendLevelup.Backend.exceptions.UsuarioValidationException;
 import com.backendLevelup.Backend.model.Usuario;
 import com.backendLevelup.Backend.repository.UsuarioRepository;
 import com.backendLevelup.Backend.security.JwtService;
@@ -13,8 +12,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDate;
-import java.time.Period;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -39,64 +36,55 @@ public class UsuarioServiceImpl implements UsuarioService {
         this.userDetailsService = userDetailsService;
     }
 
+    // ---------------------------
+    // REGISTRO
+    // ---------------------------
     @Override
     public UsuarioDTO createUsuario(RegistroUsuarioDTO dto) {
-        // Validar correo
-        if (usuarioRepository.existsByCorreoElectronico(dto.getCorreoElectronico())) {
-            throw new UsuarioValidationException("El correo ya está registrado");
-        }
 
-        // Validar edad
-        if (Period.between(dto.getFechaNacimiento(), LocalDate.now()).getYears() < 18) {
-            throw new UsuarioValidationException("Debe ser mayor de edad");
+        if (usuarioRepository.existsByEmail(dto.getEmail())) {
+            throw new RuntimeException("El email ya está registrado");
         }
-
-        // Encriptar contraseña
-        String contraseñaEncriptada = passwordEncoder.encode(dto.getContraseña());
 
         Usuario usuario = new Usuario();
-        usuario.setNombreUsuario(dto.getNombreUsuario());
-        usuario.setDireccion(dto.getDireccion());
-        usuario.setFechaNacimiento(dto.getFechaNacimiento());
-        usuario.setContraseña(contraseñaEncriptada);
-
-        // CORRECCIÓN: Manejo de RUN vacío para evitar error de duplicidad
-        if (dto.getRun() != null && !dto.getRun().trim().isEmpty()) {
-            usuario.setRun(dto.getRun());
-        } else {
-            usuario.setRun(null); // Se guarda como NULL si está vacío
-        }
-
-        usuario.setRol("cliente"); // Ajustado a "cliente" para coincidir con tu switch del frontend
-        usuario.setCorreoElectronico(dto.getCorreoElectronico());
+        usuario.setUsername(dto.getUsername());
+        usuario.setEmail(dto.getEmail());
+        usuario.setPassword(passwordEncoder.encode(dto.getPassword()));
+        usuario.setAddress(dto.getAddress());
+        usuario.setPhone(dto.getPhone());
+        usuario.setBirthDate(dto.getBirthDate());
 
         Usuario guardado = usuarioRepository.save(usuario);
-
         return usuarioAssembler.toDTO(guardado);
     }
 
+    // ---------------------------
+    // LOGIN
+    // ---------------------------
     @Override
     public UsuarioDTO login(LoginDTO dto) {
-        // 1. Buscar usuario en BD
-        Usuario usuario = usuarioRepository.findByCorreoElectronico(dto.getCorreoElectronico())
-                .orElseThrow(() -> new UsuarioValidationException("Correo o contraseña incorrectos"));
 
-        // 2. Verificar contraseña
-        if (!passwordEncoder.matches(dto.getContraseña(), usuario.getContraseña())) {
-            throw new ResourceNotFoundException("Correo o contraseña incorrectos");
+        Usuario usuario = usuarioRepository.findByEmail(dto.getEmail())
+                .orElseThrow(() -> new RuntimeException("Credenciales incorrectas"));
+
+        if (!passwordEncoder.matches(dto.getPassword(), usuario.getPassword())) {
+            throw new RuntimeException("Credenciales incorrectas");
         }
 
-        // 3. Generar Token
-        UserDetails userDetails = userDetailsService.loadUserByUsername(usuario.getCorreoElectronico());
-        String jwtToken = jwtService.generateToken(userDetails);
+        UserDetails userDetails =
+                userDetailsService.loadUserByUsername(usuario.getEmail());
 
-        // 4. Convertir a DTO y agregar token
+        String token = jwtService.generateToken(userDetails);
+
         UsuarioDTO response = usuarioAssembler.toDTO(usuario);
-        response.setToken(jwtToken);
+        response.setToken(token);
 
         return response;
     }
 
+    // ---------------------------
+    // LISTAR
+    // ---------------------------
     @Override
     public List<UsuarioDTO> listarUsuarios() {
         return usuarioRepository.findAll()
@@ -105,33 +93,38 @@ public class UsuarioServiceImpl implements UsuarioService {
                 .collect(Collectors.toList());
     }
 
+    // ---------------------------
+    // OBTENER POR ID
+    // ---------------------------
     @Override
     public UsuarioDTO obtenerPorId(Long id) {
         Usuario usuario = usuarioRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado con ID: " + id));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Usuario no encontrado con ID: " + id)
+                );
+
         return usuarioAssembler.toDTO(usuario);
     }
 
+    // ---------------------------
+    // ACTUALIZAR
+    // ---------------------------
     @Override
     public UsuarioDTO actualizarUsuario(Long id, RegistroUsuarioDTO dto) {
+
         Usuario usuario = usuarioRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Usuario no encontrado con ID: " + id));
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Usuario no encontrado con ID: " + id)
+                );
 
-        usuario.setNombreUsuario(dto.getNombreUsuario());
-        usuario.setCorreoElectronico(dto.getCorreoElectronico());
-        usuario.setDireccion(dto.getDireccion());
+        usuario.setUsername(dto.getUsername());
+        usuario.setEmail(dto.getEmail());
+        usuario.setAddress(dto.getAddress());
+        usuario.setPhone(dto.getPhone());
+        usuario.setBirthDate(dto.getBirthDate());
 
-        // CORRECCIÓN: Aplicamos la misma lógica del RUN al actualizar
-        if (dto.getRun() != null && !dto.getRun().trim().isEmpty()) {
-            usuario.setRun(dto.getRun());
-        } else {
-            usuario.setRun(null);
-        }
-
-        usuario.setFechaNacimiento(dto.getFechaNacimiento());
-
-        if (dto.getContraseña() != null && !dto.getContraseña().isEmpty()) {
-            usuario.setContraseña(passwordEncoder.encode(dto.getContraseña()));
+        if (dto.getPassword() != null && !dto.getPassword().isBlank()) {
+            usuario.setPassword(passwordEncoder.encode(dto.getPassword()));
         }
 
         Usuario actualizado = usuarioRepository.save(usuario);
